--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: android
-sudo: required
 jdk: oraclejdk8
+sudo: false
 
 notifications:  #Optional
   email:
@@ -22,34 +22,43 @@ env:
     - ANDROID_TARGET=android-24 ANDROID_ABI=armeabi-v7a
     - ANDROID_TARGET=android-21 ANDROID_ABI=armeabi-v7a
  global:
-    - ANDROID_API=25
-    - EMULATOR_API=21
-    - ANDROID_BUILD_TOOLS=26.0.0
+    - ANDROID_API_LEVEL=26
+    - EMULATOR_API_LEVEL=21
+    - ANDROID_BUILD_TOOLS_VERSION=26.0.0
     - ADB_INSTALL_TIMEOUT=10    #Time out to 10 mins/2 minutes by default
-
+    - ANDROID_ABI=google_apis/armeabi-v7a
 android:
-    update_sdk: true  #Check for the updates each time you run the build.
     components:
-        - platform-tools
         - tools
-        - build-tools-$ANDROID_BUILD_TOOLS    #Build tool version
-        - android-$ANDROID_API  #targate api version
+        - platform-tools
+
+         # The BuildTools version used by your project
+        - build-tools-ANDROID_BUILD_TOOLS_VERSION
+
+         # The SDK version used to compile your project
+        - android-ANDROID_API_LEVEL
 
         # Additional components
         - extra-google-google_play_services
         - extra-google-m2repository  # support library
         - extra-android-m2repository # for design library
+        # Support library
+        - extra-android-support
+        - addon-google_apis-google-$ANDROID_API_LEVEL
+        - addon-google_apis-google-$EMULATOR_API_LEVEL
 
         #system images for emulator
-        #- sys-img-armeabi-v7a-android-$ANDROID_API_LEVEL
+        #- sys-img-armeabi-v7a-android-$ANDROID_API_LEVEL_LEVEL
         #- sys-img-armeabi-v7a-android-$EMULATOR_API_LEVEL
         - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
         - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
 
- licenses:
-    - android-sdk-preview-license-.+
-    - android-sdk-license-.+
-    - google-gdk-license-.+
+#Google requires you to accept their license agreement before
+#you can get their libraries and tools.
+# licenses:
+ #   - android-sdk-preview-license-.+
+  #  - android-sdk-license-.+
+   # - google-gdk-license-.+
 
 
 
@@ -68,7 +77,8 @@ script:
   - adb shell input keyevent 82 &
   #connectedCheck executes instrumentation tests located in src/androidTests/
   #- ./gradlew connectedAndroidTest -PdisablePreDex --stacktrace
-  - ./gradlew connectedAndroidTest -PdisablePreDex --stacktrace
+  #- ./gradlew connectedAndroidTest -PdisablePreDex --stacktrace
+  - ./gradlew clean build
 
 before_install:
   - chmod +x gradlew
