--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ env:
 #really useful to test different API levels. So, each commit you push to the repository will start
 #two separate builds and test prepossess.
  matrix:
-    - ANDROID_TARGET=android-26 ANDROID_ABI=armeabi-v7a
+    - ANDROID_TARGET=android-25 ANDROID_ABI=armeabi-v7a
     - ANDROID_TARGET=android-21 ANDROID_ABI=armeabi-v7a
  global:
     - ANDROID_API_LEVEL=26
@@ -30,9 +30,11 @@ env:
     - ADB_INSTALL_TIMEOUT=10    #Time out to 10 mins/2 minutes by default
     - ANDROID_ABI=google_apis/armeabi-v7a
     #- ANDROID_ABI=armeabi-v7a
+    - ANDROID_TAG=google_apis
 android:
     components:
-        - tools
+        - tools # to get the new `repository-11.xml`
+        - tools # to install Android SDK tools 25.1.x (x = 6 right now)
         - platform-tools
 
          # The BuildTools version used by your project
@@ -59,23 +61,21 @@ android:
 #Google requires you to accept their license agreement before
 #you can get their libraries and tools.
 licenses:
-  - android-sdk-preview-license-.+
-  - android-sdk-license-.+
-  - google-gdk-license-.+
+  - 'android-sdk-preview-license-.+'
+  - 'android-sdk-license-.+'
+  - 'google-gdk-license-.+'
 
 before_script:
   - chmod +x gradlew #Grant permissions
   - android list targets
   - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI  #Create AVD for given api
   - emulator -avd test -no-skin -no-audio -no-window & #Start emulator
-
-
-script:
-  - echo "Travis branch is $TRAVIS_BRANCH"    #Print out which branch it is.
-  - echo "Travis branch is in pull request $TRAVIS_PULL+REQUEST"    #Print out pull request number.
   - android-wait-for-emulator             #Run wait for the emulator script.
   - adb devices                           #Display list of devices
   - adb shell input keyevent 82 &
+script:
+  #- echo "Travis branch is $TRAVIS_BRANCH"    #Print out which branch it is.
+  #- echo "Travis branch is in pull request $TRAVIS_PULL+REQUEST"    #Print out pull request number.
   #connectedCheck executes instrumentation tests located in src/androidTests/
   #- ./gradlew connectedAndroidTest -PdisablePreDex --stacktrace
   #- ./gradlew connectedAndroidTest -PdisablePreDex --stacktrace
@@ -83,7 +83,9 @@ script:
 #  - ./gradlew clean
 #  - ./gradlew assembleDebug
 #- ./gradlew assembleDebugAndroidTest
-
+#- ./gradlew :projectcore:checkstyle
+#  - ./gradlew clean build -x lint
+#  - ./gradlew :project:connectedAndroidTest
 before_install:
   - chmod +x gradlew
   - pip install --user codecov    #Install codecov
