--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,7 @@ android:
 
          # The SDK version used to compile your project
         - android-ANDROID_API_LEVEL
+        - android-EMULATOR_API_LEVEL
 
         # Additional components
         - extra-google-google_play_services
