--- a/.travis.yml
+++ b/.travis.yml
@@ -74,7 +74,8 @@ before_script:
 
   - chmod +x gradlew #Grant permissions
   - android list targets
-  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI  #Create AVD for given api
+  #- echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI  #Create AVD for given api
+  - echo no | android create avd --force --name test --target $ANDROID_TARGET --abi $ANDROID_ABI    #Create AVD for given api
   - emulator -avd test -no-skin -no-audio -no-window & #Start emulator
   - android-wait-for-emulator             #Run wait for the emulator script.
   - adb devices                           #Display list of devices
