--- a/.travis.yml
+++ b/.travis.yml
@@ -90,10 +90,9 @@ android:
     #- sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
     #- sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
     - sys-img-${ANDROID_ABI}-android-21
-    - sys-img-${ANDROID_ABI}-android-22
-    - sys-img-${ANDROID_ABI}-android-23
+    #- sys-img-${ANDROID_ABI}-android-22
+    #- sys-img-${ANDROID_ABI}-android-23
     - sys-img-${ANDROID_ABI}-android-24
-    - sys-img-${ANDROID_ABI}-android-25
 
 #Writing build script
 before_script:
