--- a/.travis.yml
+++ b/.travis.yml
@@ -34,14 +34,15 @@ env:
     # So, each commit you push to the repository will start two separate builds and test prepossess.
     - ANDROID_TARGET=android-21 ANDROID_ABI=armeabi-v7a
     - ANDROID_TARGET=android-24 ANDROID_ABI=armeabi-v7a
+    - ANDROID_TARGET=android-25 ANDROID_ABI=google_apis/armeabi-v7a
 
   global:  #Optional
    - ANDROID_API_LEVEL=25
-   - EMULATOR_API_LEVEL=21
    - ANDROID_BUILD_TOOLS_VERSION=25.0.2
 
+   #- EMULATOR_API_LEVEL=21
    #- ANDROID_ABI=google_apis/armeabi-v7a
-   - ANDROID_ABI=armeabi-v7a
+   #- ANDROID_ABI=armeabi-v7a
    #- ANDROID_TAG=google_apis
 
    - ADB_INSTALL_TIMEOUT=20 # minutes (2 minutes by default)
@@ -87,7 +88,7 @@ android:
     #specify  at least one system image, if you need to run emulator(s) during your tests
     #specify emulator system images on which application testing will be performed.
     #If you are going to use more than one API levels remember to define all the emulators needed
-    #- sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
+    - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
     #- sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
     - sys-img-${ANDROID_ABI}-android-21
     #- sys-img-${ANDROID_ABI}-android-22
