--- a/.travis.yml
+++ b/.travis.yml
@@ -73,6 +73,8 @@ android:
 
     # The SDK version used to compile your project
     - android-ANDROID_API_LEVEL
+    - android-21
+    - android-24
 
     # Additional components
     - extra-google-google_play_services # Google Play Services
