--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,7 @@ env:
    - ANDROID_BUILD_TOOLS_VERSION=25.0.2
 
    #- EMULATOR_API_LEVEL=21
+
    #- ANDROID_ABI=google_apis/armeabi-v7a
    #- ANDROID_ABI=armeabi-v7a
    #- ANDROID_TAG=google_apis
@@ -73,8 +74,6 @@ android:
 
     # The SDK version used to compile your project
     - android-ANDROID_API_LEVEL
-    - android-21
-    - android-24
 
     # Additional components
     - extra-google-google_play_services # Google Play Services
@@ -84,7 +83,7 @@ android:
 
     #To get a list of available exact component names and descriptions run the command
     #android list sdk --no-ui --all --extended (preferably in your local development machine).
-    #- addon-google_apis-google-$ANDROID_API_LEVEL
+    - addon-google_apis-google-$ANDROID_API_LEVEL
     #- addon-google_apis-google-$EMULATOR_API_LEVEL
 
     #specify  at least one system image, if you need to run emulator(s) during your tests
