--- a/.travis.yml
+++ b/.travis.yml
@@ -75,6 +75,9 @@ android:
     # The SDK version used to compile your project
     - android-ANDROID_API_LEVEL
 
+    - android-21
+    - android-24
+
     # Additional components
     - extra-google-google_play_services # Google Play Services
     - extra-google-m2repository  # support library
